--- a/example2.html
+++ b/example2.html
@@ -11,16 +11,20 @@
   <script src="https://cdn.jsdelivr.net/npm/jkanban@1.3.1/dist/jkanban.min.js"></script>
   <style>
     /* カードの設定 */
-    .text-red {
+    .kanban-item .text-red {
       color: crimson;
     }
-    .text-bold {
+    .kanban-item .text-bold {
       font-weight: bold;
     }
-    .item-body img {
+    .kanban-item.orange {
+      color: white;
+      background-color: darkorange;
+    }
+    .kanban-item .item-body img {
       width: 100%;
     }
-    .item-body {
+    .kanban-item .item-body {
       max-height: 240px;
       overflow: hidden;
     }
@@ -33,7 +37,7 @@
       background-color: crimson;
     }
     .kanban-board header.blue {
-      background-color: steelblue;
+      background-color: royalblue;
     }
     .kanban-board header.green {
       background-color: green;
@@ -55,11 +59,14 @@
         "item"  : [
           {
             "id"      : "item-id-1",
-            "title"   : "<span class='text-red text-bold'>カード 1</span>"
+            "title"   : "<span class='text-red text-bold'>カード 1</span>",
+            "username": "hoge"
           },
           {
             "id"      : "item-id-2",
-            "title"   : "<div class='item-title'>カード 2</div><div class='item-body'><img src='https://i.imgur.com/b1dGytP.jpeg' /></div>"
+            "title"   : "カード 2",
+            "class": "orange",
+            "username": "piyo"
           }
         ]
       },
@@ -70,7 +77,7 @@
         "item": [
           {
             "id": "item-id-3",
-            "title": "カード 3"
+            "title": "<div class='item-title'>カード 3</div><div class='item-body'><img src='https://i.imgur.com/b1dGytP.jpeg' /></div>"
           }
         ]
       },
@@ -154,6 +161,15 @@
       // メッセージを表示
       alert(alertMsg);
     }
+
+    // カードに data-class= プロパティが設定されていたら、
+    // その値を取得してクラス名に追加する。
+    document.querySelectorAll('.kanban-item').forEach(item => {
+      console.dir(item);
+      if (item.dataset.class) {
+        item.classList.add(item.dataset.class);
+      }
+    });
 
   </script>
 </body>
